testsuite/tests/splice-imports/SI18.hs
{-# LANGUAGE TemplateHaskellQuotes #-}
{-# LANGUAGE NoMonomorphismRestriction #-}
{-# LANGUAGE NoPathCSP #-}
module SI18 where

boo a = 'a
